[package]
name = "gh-stars"
authors = ["Prabir Shrestha <mail@prabir.me>"]
version = "0.1.10"
edition = "2024"
description = "A CLI tool to fetch, cache, and search GitHub stars with vector search"
readme = "README.md"
license = "MIT"
repository = "https://github.com/prabirshrestha/gh-stars"
homepage = "https://github.com/prabirshrestha/gh-stars"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
fastembed = { version = "4.7.0", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
gh-token = "0.1.8"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.35.0", features = ["bundled", "blob", "array"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite-vec = "0.1.6"
tokio = { version = "1.44.2", features = ["full"] }
zerocopy = "0.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
